update docker fils

--- a/alembic.ini
+++ b/alembic.ini
@@ -7,9 +7,9 @@ file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(re
 
 prepend_sys_path = .
 
-version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
+version_path_separator = os 
 
-sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s?async_fallback=True
+sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@db-pg:%(DB_PORT)s/%(DB_NAME)s?async_fallback=True
 
 
 [post_write_hooks]
