--- a/Dockerfile_main
+++ b/Dockerfile_main
@@ -1,8 +1,6 @@
 FROM python:3.10-slim
 
-
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1
 
 RUN mkdir /backend
 WORKDIR /backend
@@ -11,4 +9,5 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+RUN chmod a+x /backend/entrypoint.sh
 ENTRYPOINT ["sh", "/backend/entrypoint.sh"]
