--- a/Dockerfile_main
+++ b/Dockerfile_main
@@ -9,5 +9,5 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-RUN chmod a+x /backend/entrypoint.sh
+RUN chmod g+x /backend/entrypoint.sh
 ENTRYPOINT ["sh", "/backend/entrypoint.sh"]
