--- a/alembic.ini
+++ b/alembic.ini
@@ -9,7 +9,7 @@ prepend_sys_path = .
 
 version_path_separator = os 
 
-sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@db-pg:%(DB_PORT)s/%(DB_NAME)s?async_fallback=True
+sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s?async_fallback=True
 
 
 [post_write_hooks]
