fix changer updater fix orm query for counters

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
 DB_HOST=localhost
-DB_PORT=5433
+DB_PORT=5432
 DB_NAME=menu
 DB_USER=postgres
 DB_PASS=postgres
 
 DB_HOST_TEST=localhost
-DB_PORT_TEST=5433
+DB_PORT_TEST=5432
 DB_NAME_TEST=test_menu
 DB_USER_TEST=postgres
 DB_PASS_TEST=postgres
 
+RABBITMQ_HOST=localhost
+RABBITMQ_USER=guest
+RABBITMQ_PORT=5672
+RABBITMQ_PASS=guest
+
 REDIS_HOST=localhost
-REDIS_PORT=6380
+REDIS_PORT=6379
